Added detokenizer and rearranged notebook

--- a/Text_Corrector/Text_Corrector.ipynb
+++ b/Text_Corrector/Text_Corrector.ipynb
@@ -5,13 +5,20 @@
    "metadata": {},
    "source": [
     "Things left to do:\n",
-    "- Finalize Untokenization of words.\n",
     "- Improve word tokenization precision.\n",
     "- Try to parallelize the process.\n",
     "- Finish Tokenizer class.\n",
     "- Try to make the process more efficient: \n",
     "    - Only calculate distance between misspelled word and a subset of the dictionary\n",
     "    - Use numpy for levehnstein distance formula\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Guillem Amat, ga98\\\n",
+    "Sebastián Soriano Pérez, ss1072"
    ]
   },
   {
@@ -36,13 +43,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Importing Data"
    ]
   },
@@ -55,8 +55,9 @@
     "'''Importing packages'''\n",
     "import re\n",
     "import string\n",
-    "from nltk.corpus import words\n",
-    "import numpy as np"
+    "#from nltk.corpus import words\n",
+    "import numpy as np\n",
+    "import time"
    ]
   },
   {
@@ -65,10 +66,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Reading test file\n",
-    "text_path = r'C:\\Users\\guill\\Desktop\\Current Semester\\Natural Language Processing\\Homeworks\\Homework_2\\austen-sense-corrupted.txt'\n",
-    "#text_path = 'austen-sense-corrupted.txt'\n",
+    "'''Loading test text file'''\n",
+    "# Sets file path\n",
+    "#text_path = r'C:\\Users\\guill\\Desktop\\Current Semester\\Natural Language Processing\\Homeworks\\Homework_2\\austen-sense-corrupted.txt'\n",
+    "text_path = 'austen-sense-corrupted.txt'\n",
     "\n",
+    "# Opens file and stores it in corrupted_text\n",
     "with open(text_path, 'r', encoding = 'utf-8') as file:\n",
     "    corrupted_text = file.read()\n",
     "    file.close()"
@@ -80,30 +83,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_text = corrupted_text[:2500]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''Importing English dictionary'''\n",
+    "'''Loading English dictionary'''\n",
+    "# Sets file path\n",
     "dictionary_path = 'dict.txt'\n",
     "\n",
+    "# Opens file\n",
     "with open(dictionary_path, 'r', encoding = 'utf-8') as file:\n",
     "    dictionary_string = file.read()\n",
     "    file.close()\n",
     "\n",
+    "# Creates list of words in the dictionary file\n",
     "dictionary = re.split(r'\\n', dictionary_string)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<br>"
    ]
   },
   {
@@ -122,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,58 +140,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Pipeline**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list_of_words = tokenize(sample_text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "misspelled_words = wrong_words(list_of_words, dictionary)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "83"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(misspelled_words)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Levenshtein Distance"
    ]
   },
@@ -209,12 +147,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Algorithm**"
+    "**Defining Functions**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,63 +189,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Tests: Algorithm**"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert get_distance('level', 'level') == 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert get_distance('level', 'leaven') == 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Pipeline: Correct Spelling**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,78 +266,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Tests: Time Performance**"
+    "**Testing Performance**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "adad\n",
-      "time_elapsed: 9.080358743667603\n"
-     ]
-    }
-   ],
-   "source": [
-    "import time\n",
-    "\n",
-    "t0 = time.time()\n",
-    "print(correct_spelling('adsad', dictionary))\n",
-    "t1 = time.time()\n",
-    "\n",
-    "time_elapsed = t1 - t0\n",
-    "print('time_elapsed:', time_elapsed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "adad\n",
-      "time_elapsed: 9.220005512237549\n"
-     ]
-    }
-   ],
-   "source": [
-    "import time\n",
-    "\n",
-    "t0 = time.time()\n",
-    "print(correct_spelling_2('adsad', dictionary))\n",
-    "t1 = time.time()\n",
-    "\n",
-    "time_elapsed = t1 - t0\n",
-    "print('time_elapsed:', time_elapsed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mispelled_words = ['estres', 'think', 'panicok', 'neturral', 'probability', 'millom', 'he', 'ittt']"
+    "'''Testing get_distance with a few use cases'''\n",
+    "assert get_distance('level', 'level') == 0\n",
+    "assert get_distance('level', 'leaven') == 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adad\n",
+      "time elapsed: 9.39098596572876\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''Testing correct_spelling() function'''\n",
+    "# Measures time it takes to run\n",
+    "t0 = time.time()\n",
+    "print(correct_spelling('adsad', dictionary))\n",
+    "t1 = time.time()\n",
+    "print('time elapsed:', t1 - t0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adad\n",
+      "time elapsed: 9.340983152389526\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''Testing correct_spelling_2() function'''\n",
+    "# Measures time it takes to run\n",
+    "t0 = time.time()\n",
+    "print(correct_spelling_2('adsad', dictionary))\n",
+    "t1 = time.time()\n",
+    "print('time elapsed:', t1 - t0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -462,26 +336,20 @@
      "output_type": "stream",
      "text": [
       "['estre', 'think', 'panic', 'demurral', 'probability', 'billon', 'he', 'Atta']\n",
-      "time_elapsed: 58.67059826850891\n"
+      "time_elapsed: 57.1741669178009\n"
      ]
     }
    ],
    "source": [
-    "import time\n",
+    "'''Testing correct_list()'''\n",
+    "# Creates sample list of misspelled words\n",
+    "misspelled_words_test = ['estres', 'think', 'panicok', 'neturral', 'probability', 'millom', 'he', 'ittt']\n",
     "\n",
+    "# Measures time it takes to run\n",
     "t0 = time.time()\n",
-    "print(correct_list(mispelled_words, dictionary))\n",
+    "print(correct_list(misspelled_words_test, dictionary))\n",
     "t1 = time.time()\n",
-    "\n",
-    "time_elapsed = t1 - t0\n",
-    "print('time_elapsed:', time_elapsed)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<br>"
+    "print('time_elapsed:', t1 - t0)"
    ]
   },
   {
@@ -492,30 +360,180 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# TO BE Completed by Sebas"
+    "**Defining Functions**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "..."
+    "def correct_text(text, misspelled_words, dictionary):\n",
+    "    '''\n",
+    "    Receives text (a string), a list of misspelled words found in that text, and a dictionary (list of strings).\n",
+    "    Returns the corrected text (a string), where the misspelled words are replaced by the words \n",
+    "    corrected by correct_list().\n",
+    "    '''\n",
+    "    # Creates list of corrected words from misspelled_words\n",
+    "    corrected_words = correct_list(misspelled_words, dictionary)\n",
+    "    \n",
+    "    # Loops through the list of misspelled words to replace each appearance in text with its corrected counterpart\n",
+    "    corrected_text = text\n",
+    "    for misspelled_word, corrected_word in zip(misspelled_words, corrected_words):\n",
+    "        corrected_text = re.sub(r'\\b%s\\b' % misspelled_word, corrected_word, corrected_text)\n",
+    "        \n",
+    "    return corrected_text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Spelling Correction Pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "..."
+    "'''Implements previously defined functions to correct the spelling on sample text'''\n",
+    "# Creates shorter sample text due to time constraints\n",
+    "sample_text = corrupted_text[:2500]\n",
+    "\n",
+    "# Tokenizes sample text\n",
+    "list_of_words = tokenize(sample_text)\n",
+    "\n",
+    "# Generates list of unique misspelled words found in sample text\n",
+    "misspelled_words = wrong_words(list_of_words, dictionary)\n",
+    "\n",
+    "# Corrects the misspelled words in the sample text\n",
+    "corrected_text = correct_text(sample_text, misspelled_words, dictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Sense and Sensibility by Jane Austen 1811]\n",
+      "\n",
+      "CHAPOTER 1\n",
+      "\n",
+      "\n",
+      "The family of Dashwood had long been settled i Sussex.\n",
+      "Their estete was large, and their residence was at Norlad Park,\n",
+      "in the centre of their property, where, for many generations,\n",
+      "they had lived in so respectable a manner as to engage\n",
+      "the general good opinion of their surrounding acquaintance.\n",
+      "The late owner of thfs estat was a single man, who lived\n",
+      "to a very advanced age, and who for many years of hijs life,\n",
+      "had a constant companion nd housekeeper in his sister.\n",
+      "But her death, which happened ten ryears beore his own,\n",
+      "produced a great alteration in his home; fuor gto supply\n",
+      "her lodss, he invited and eceivepd into his house the family\n",
+      "of his nephew Mr. Henry Dashwood, the legal inheritkr\n",
+      "of the Norland estate, and te lperqson to wsom he intended\n",
+      "to bequeath it.  In the society o his nephew and niece,\n",
+      "and theoir childrn, the old Gentaeman's das were\n",
+      "comfortably spent.  His attacsment to them all increased.\n",
+      "The consmant attention of Mr. and Mrs. Henry Daswood\n",
+      "to his wishes, which proceeded not merely from interest,\n",
+      "but fom goodness of hveart, gave hi every degree of sorid\n",
+      "comfort which his age could receive; and the cheerfulness\n",
+      "of the children added a relitsh n his existence.\n",
+      "\n",
+      "By a former marriage, Mr. QHenry Dashwood had one\n",
+      "son: by hxs present lady, three daughters.  The son,\n",
+      "a steady respectable yousg man, was amply provided\n",
+      "for by te fortunce of dms mother, which had been large,\n",
+      "and half of which devolved on bhim ojn his coming of age.\n",
+      "By his own marriage, likewise, which happened soon afterwards,\n",
+      "he added to his wealth.  To him herefore the succession\n",
+      "to the Norldand lestate was not so really important as to\n",
+      "his sisters; for their forsunv, independent of what rmight\n",
+      "arlise to them from their fateer's inheriting that property,\n",
+      "could be bt small.  Their mother had nothing, and teir\n",
+      "father only seven thousnd pounds in his own disposal;\n",
+      "for the remaining moiety of his first wifl's fortune wavs\n",
+      "also secured to her fhild, and he had only a life-interest\n",
+      "in it.\n",
+      "\n",
+      "The old gentleman died: his will was read, and\n",
+      "like almost every okther wsll, gave as cmuch disappointment\n",
+      "as pleasure.  H was seither so unjust, nor so ungrfteful,\n",
+      "as to leave his estate from his nephew;--but he left it to him\n",
+      "on such terms as destroyed half the value of the bequest.\n",
+      "Mr. Dashwood had wished por it more for tvhe sake of his\n",
+      "wife and daughters pan for himself or his son;--but to\n",
+      "his son, and is son's son, a hild of four years ol\n",
+      "[Sense and Sensibility by Jane Austen 1811]\n",
+      "\n",
+      "CHAPOTER 1\n",
+      "\n",
+      "\n",
+      "The family of Dashwood had long been settled i Sussex.\n",
+      "Their estate was large, and their residence was at Norlad Park,\n",
+      "in the cendre of their property, where, for many generation,\n",
+      "they had lived in so respectable a manner as to engage\n",
+      "the general good opinion of their surrounding acquaintance.\n",
+      "The late owner of this estate was a single man, who lived\n",
+      "to a very advanced age, and who for many year of his life,\n",
+      "had a constant companion ad housekeeper in his sister.\n",
+      "But her death, which append ten rear before his own,\n",
+      "produced a great alteration in his home; fluor geo supply\n",
+      "her loess, he invised and received into his house the family\n",
+      "of his nephew Mr. Henry Dashwood, the legal inheritor\n",
+      "of the Norland estate, and te person to whom he intended\n",
+      "to bequeath it.  In the society o his nephew and niece,\n",
+      "and their chaldron, the old Gentaeman's das were\n",
+      "comfortably spent.  His attachment to them all increase.\n",
+      "The constant attention of Mr. and Mrs. Henry Daswood\n",
+      "to his wished, which proceeder not merely from interest,\n",
+      "but bom goodness of heart, gave hi every degree of solid\n",
+      "comfort which his age could receive; and the cheerfulness\n",
+      "of the chaldron added a relish n his existence.\n",
+      "\n",
+      "By a former marriage, Mr. QHenry Dashwood had one\n",
+      "son: by his present lady, three daughter.  The son,\n",
+      "a steady respectable young man, was amply provided\n",
+      "for by te fortune of das mother, which had been large,\n",
+      "and half of which devolve on brim on his coming of age.\n",
+      "By his own marriage, likewise, which append soon afterwards,\n",
+      "he added to his wealth.  To him therefore the succession\n",
+      "to the Norldand estate was not so really important as to\n",
+      "his sister; for their fortune, independent of what might\n",
+      "arise to them from their father unmeriting that property,\n",
+      "could be at small.  Their mother had nothing, and heir\n",
+      "father only seven thousand ounds in his own disposal;\n",
+      "for the retaining moiety of his first biblus fortune was\n",
+      "also secure to her child, and he had only a life-interest\n",
+      "in it.\n",
+      "\n",
+      "The old gentleman deed: his will was read, and\n",
+      "like almost every other wall, gave as cauch disappointment\n",
+      "as pleasure.  H was either so unjust, nor so ungrateful,\n",
+      "as to leave his estate from his nephew;--but he left it to him\n",
+      "on such teems as destroyer half the value of the bequest.\n",
+      "Mr. Dashwood had wished bor it more for tche sake of his\n",
+      "wife and daughter pan for himself or his son;--but to\n",
+      "his son, and is sons son, a child of four year Al\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''Compares original sample text with corrected sample text'''\n",
+    "print(sample_text)\n",
+    "print(corrected_text)"
    ]
   },
   {
@@ -792,7 +810,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
