--- a/Text_Corrector/Text_Corrector.ipynb
+++ b/Text_Corrector/Text_Corrector.ipynb
@@ -4,28 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Things left to do:\n",
-    "- Improve word tokenization precision.\n",
-    "- Try to parallelize the process.\n",
-    "- Finish Tokenizer class.\n",
-    "- Try to make the process more efficient: \n",
-    "    - Only calculate distance between misspelled word and a subset of the dictionary\n",
-    "    - Use numpy for levehnstein distance formula\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Guillem Amat, ga98\\\n",
-    "Sebastián Soriano Pérez, ss1072"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Project 1: Basic Spelling Correction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Team members:** Guillem Amat (ga98), Sebastián Soriano Pérez (ss1072)"
    ]
   },
   {
@@ -290,7 +276,7 @@
      "output_type": "stream",
      "text": [
       "adad\n",
-      "time elapsed: 9.39098596572876\n"
+      "time elapsed: 8.804582118988037\n"
      ]
     }
    ],
@@ -313,7 +299,7 @@
      "output_type": "stream",
      "text": [
       "adad\n",
-      "time elapsed: 9.340983152389526\n"
+      "time elapsed: 9.231670618057251\n"
      ]
     }
    ],
@@ -328,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +322,7 @@
      "output_type": "stream",
      "text": [
       "['estre', 'think', 'panic', 'demurral', 'probability', 'billon', 'he', 'Atta']\n",
-      "time_elapsed: 57.1741669178009\n"
+      "time_elapsed: 56.16442131996155\n"
      ]
     }
    ],
@@ -368,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -547,55 +533,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Resources"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Potential list of steps to speed up the process**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Use a dictionary compiled from the book.\n",
-    "- Check if a word is correctly spelled. Run through the whole dictionary to see if it exists.\n",
-    "- Investigate whether Spark is a possibility.\n",
-    "- Assume whether the two first letters are okey.\n",
-    "- Filter for misspelled words.\n",
-    "- Ignore whatever that starts with a Capital Letter."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Resources**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- *Tokenization:* https://stackoverflow.com/questions/21948019/python-untokenize-a-sentence, https://medium.com/analytics-vidhya/tokenization-building-a-tokenizer-and-a-sentencizer-c19a00393c19\n",
-    "- *Levehnstein Distance:* https://www.python-course.eu/levenshtein_distance.php, https://stackabuse.com/levenshtein-distance-and-text-similarity-in-python/, https://en.wikibooks.org/wiki/Algorithm_Implementation/Strings/Levenshtein_distance#Python,\n",
-    "https://blog.paperspace.com/implementing-levenshtein-distance-word-autocomplete-autocorrect/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Appendix"
    ]
   },
@@ -615,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +575,7 @@
     "        \n",
     "        return self.sentences\n",
     "        \n",
-    "    def _desentencize(self):\n",
+    "    def desentencize(self):\n",
     "        '''Joins sentences into a single text corpus'''\n",
     "        self._paragraphs = [' '.join(sentence) for sentence in self.sentences]\n",
     "        self._text = ['\\n'.join(self._paragraphs)]\n",
@@ -678,17 +615,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Sample objects to test"
+    "Sample objects to test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,17 +650,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 290,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Moving from text to sentences and paragraphs and back"
+    "Moving from text to sentences and back:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,20 +667,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['I worked on my NLP Assignment today.', 'This is another sentence.'],\n",
+       " ['I tested many methods and models.'],\n",
+       " ['I think I might have succeeded.', '']]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sentences.sentencize()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I worked on my NLP Assignment today. This is another sentence.\n",
+      "I tested many methods and models.\n",
+      "I think I might have succeeded. \n"
+     ]
+    }
+   ],
    "source": [
-    "print(sentences._desentencize()[0])"
+    "print(sentences.desentencize()[0])"
    ]
   },
   {
@@ -758,17 +714,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 291,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Moving from sentences to words and back"
+    "Moving from sentences to words and back:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,20 +731,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Hello', 'my', 'friend,', 'how', 'are', 'you?'],\n",
+       " ['How', 'is', 'it', 'going?'],\n",
+       " ['It', 'is', '12.30pm'],\n",
+       " ['Morning']]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "words.tokenize()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hello my friend, how are you?',\n",
+       " 'How is it going?',\n",
+       " 'It is 12.30pm',\n",
+       " 'Morning']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words.detokenize()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**B) Parallelization**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A great way to improve speed in our program would have been to adapt our code to be run on Spark. We would need to change the way our pipeline is built so functions can be run on parallelizable RDD's. The code below shows how we could apply the get_distance function for a misspelled word and get the lowest edit distance possible in a dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\spark\\\\spark-3.0.0-bin-hadoop2.7'"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import findspark\n",
+    "findspark.init()\n",
+    "findspark.find()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "words.detokenize()"
+    "from pyspark import SparkContext, SparkConf\n",
+    "conf = SparkConf().setAppName('ga98').setMaster('local')\n",
+    "sc = SparkContext(conf=conf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word_list = list(misspelled_words)\n",
+    "rdd_dictionary = sc.parallelize(dictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd_dictionary.map(lambda x: get_distance(x, word_list[1])).min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc.stop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**C) Potential Improvements and things to work on the future** "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Improve word tokenization precision.\n",
+    "- Parallelize the *Levenshtein Distance Algorithm*.\n",
+    "- Improve the *Avanced Tokenizer class*.\n",
+    "- Make the process more efficient: \n",
+    "    - Only calculate distance between misspelled word and a subset of the dictionary.\n",
+    "    - Use numpy in the *Levenshtein Distance Algorithm* instead of native Python.\n",
+    "    - Use a low-level programming language like C++."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**D) References and Resources used**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- *Tokenization:* \n",
+    "    - https://stackoverflow.com/questions/21948019/python-untokenize-a-sentence\n",
+    "    - https://medium.com/analytics-vidhya/tokenization-building-a-tokenizer-and-a-sentencizer-c19a00393c19\n",
+    "- *Levehnstein Distance:* \n",
+    "    - https://www.python-course.eu/levenshtein_distance.php\n",
+    "    - https://stackabuse.com/levenshtein-distance-and-text-similarity-in-python/\n",
+    "    - https://en.wikibooks.org/wiki/Algorithm_Implementation/Strings/Levenshtein_distance#Python,\n",
+    "    - https://blog.paperspace.com/implementing-levenshtein-distance-word-autocomplete-autocorrect/"
    ]
   }
  ],
@@ -810,7 +940,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
